[package]
name = "codex-clawbot"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_clawbot"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
openlark = { version = "0.15.0-rc.1", default-features = false, features = [
    "ai",
    "analytics",
    "application",
    "auth",
    "base",
    "bitable",
    "cardkit",
    "communication",
    "docs",
    "helpdesk",
    "hr",
    "mail",
    "meeting",
    "platform",
    "protocol",
    "security",
    "user",
    "webhook",
    "websocket",
    "workflow",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
toml = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
