[package]
name = "codex-clawbot"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_clawbot"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
openlark = { version = "0.15.0", default-features = false, features = ["auth", "communication", "docs-bitable", "websocket"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
toml = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
