[package]
name = "codex-dream"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_dream"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
bm25 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
codex-git-utils = { workspace = true }
codex-instructions = { workspace = true }
codex-protocol = { workspace = true }
codex-retrospective = { workspace = true }
codex-secrets = { workspace = true }
codex-utils-output-truncation = { workspace = true }
codex-utils-template = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt", "rt-multi-thread"] }
walkdir = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
