[package]
name = "codex-execpolicy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Codex exec policy: prefix-based Starlark rules for command decisions."

[lib]
name = "codex_execpolicy"
path = "src/lib.rs"

[[bin]]
name = "codex-execpolicy"
path = "src/main.rs"
required-features = ["starlark"]

[lints]
workspace = true

[features]
default = []
starlark = ["dep:starlark"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
codex-utils-absolute-path = { workspace = true }
multimap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shlex = { workspace = true }
starlark = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
