[package]
name = "codex-insight"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_insight"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
codex-protocol = { workspace = true }
codex-rollout = { workspace = true }
pathdiff = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread"] }
tracing = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
insta = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
