[package]
name = "codex-loop-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_loop_runtime"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
codex-loop = { workspace = true }
codex-protocol = { workspace = true }
codex-utils-absolute-path = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
