[package]
name = "codex-loop-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_loop_runtime"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
codex-loop = { workspace = true }
codex-protocol = { workspace = true }
codex-utils-absolute-path = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
