[package]
name = "codex-network-proxy"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
name = "codex_network_proxy"
path = "src/lib.rs"

[lints]
workspace = true

[features]
default = []
runtime = [
    "dep:rama-core",
    "dep:rama-http",
    "dep:rama-http-backend",
    "dep:rama-net",
    "dep:rama-socks5",
    "dep:rama-tcp",
    "dep:rama-tls-rustls",
]
runtime-unix = ["runtime", "dep:rama-unix"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
chrono = { workspace = true }
codex-utils-absolute-path = { workspace = true }
codex-utils-home-dir = { workspace = true }
codex-utils-rustls-provider = { workspace = true }
globset = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
url = { workspace = true }
rama-core = { version = "=0.3.0-alpha.4", optional = true }
rama-http = { version = "=0.3.0-alpha.4", optional = true }
rama-http-backend = { version = "=0.3.0-alpha.4", optional = true, features = ["tls"] }
rama-net = { version = "=0.3.0-alpha.4", optional = true, features = ["http", "tls"] }
rama-socks5 = { version = "=0.3.0-alpha.4", optional = true }
rama-tcp = { version = "=0.3.0-alpha.4", optional = true, features = ["http"] }
rama-tls-rustls = { version = "=0.3.0-alpha.4", optional = true, features = ["http"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(target_family = "unix")'.dependencies]
rama-unix = { version = "=0.3.0-alpha.4", optional = true }
