[package]
name = "codex-remote"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "codex-remote"
path = "src/main.rs"

[lib]
name = "codex_remote"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
codex-app-server-client = { workspace = true }
codex-app-server-protocol = { workspace = true }
codex-arg0 = { workspace = true }
axum = { workspace = true, default-features = false, features = [
    "http1",
    "json",
    "tokio",
] }
clap = { workspace = true, features = ["derive"] }
codex-core = { workspace = true }
codex-feedback = { workspace = true }
codex-protocol = { workspace = true }
codex-rollout = { workspace = true }
codex-thread-store = { workspace = true }
gethostname = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
