[package]
edition.workspace = true
license.workspace = true
name = "codex-rollout-trace"
version.workspace = true

[lib]
doctest = false
name = "codex_rollout_trace"
path = "src/lib.rs"

[features]
default = []
code-mode = ["dep:codex-code-mode"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
codex-code-mode = { workspace = true, optional = true }
codex-protocol = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
