[package]
name = "codex-threadmessages"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_threadmessages"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
