[package]
edition.workspace = true
license.workspace = true
name = "codex-tools"
version.workspace = true

[lints]
workspace = true

[features]
default = []
code-mode = ["dep:codex-code-mode"]
mcp = ["dep:rmcp"]

[dependencies]
codex-app-server-protocol = { workspace = true }
codex-code-mode = { workspace = true, optional = true }
codex-features = { workspace = true }
codex-protocol = { workspace = true }
codex-utils-absolute-path = { workspace = true }
codex-utils-pty = { workspace = true }
rmcp = { workspace = true, optional = true, default-features = false, features = [
    "base64",
    "macros",
    "schemars",
    "server",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
