[package]
name = "codex-workflow"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_workflow"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
humantime = "2"
indexmap = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["macros", "process", "rt", "rt-multi-thread", "test-util", "time"] }
tokio-util = { workspace = true, features = ["time"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
